--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                <div id="text">
                     <div id="code">                 
                     
-                    <span class="say">You entered my heart Slowly, quietly and passionately</span><br>
-                    <span class="say">Your love spread through me.</span><br>
-                    <span class="say">Now Why are you so perfect,</span><br>
-                     <span class="say">God only knows..
+                    <span class="say">Hello meri chubby baby gurl happy new year</span><br>
+                    <span class="say">aur tu pta hai mere liye 2024 me mila sbse best gift hai infect 2024 kya puri life ka hi sbse best</span><br>
+                    <span class="say">aur tu meri nhi hai, main tera hu</span><br>
+                     <span class="say">aur schi btau teri vjh se hi main aaj ke tym pe itna success ho paya hu thanks for it baby
 </span><br>
                     <span class="say">In every direction, there is you – just you.</span><br>
                     <span class="say">My emotions are rising and I am facing short of breath;</span><br>
