--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                <div id="text">
                     <div id="code">                 
                     
-                    <span class="say">Hello meri chubby baby gurl happy new year</span><br>
-                    <span class="say">aur tu pta hai mere liye 2024 me mila sbse best gift hai infect 2024 kya puri life ka hi sbse best</span><br>
+                    <span class="say">Hello meri bewdi baby gurl happy new year🐸☠️</span><br>
+                    <span class="say">aur ek baat btau tu pta hai mere liye 2024 me mila sbse </span><br>
+                    <span class="say">best gift hai infect 2024 kya puri life ka hi sbse best</span><br>
                     <span class="say">aur tu meri nhi hai, main tera hu</span><br>
                      <span class="say">aur schi btau teri vjh se hi main aaj ke tym pe itna success ho paya hu thanks for it baby
 </span><br>
