--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <span class="say">Hello meri bewdi baby gurl happy new year🐸☠️</span><br>
                     <span class="say">aur ek baat btau tu pta hai mere liye 2024 me mila sbse </span><br>
                     <span class="say">best gift hai infect 2024 kya puri life ka hi sbse best</span><br>
-                    <span class="say">aur tu meri nhi hai, main tera hu</span><br>
-                     <span class="say">aur schi btau teri vjh se hi main aaj ke tym pe itna success ho paya hu thanks for it baby
-</span><br>
+                    <span class="say">aur ek baat tu meri nhi hai, main hi tera hu</span><br>
+                     <span class="say">aur schi btau teri vjh se hi main aaj ke tym pe itna success ho paya hu thanks for it baby</span><br>
+                    <span class="say">success ho paya hu thanks for it baby</span><br>
                     <span class="say">In every direction, there is you – just you.</span><br>
                     <span class="say">My emotions are rising and I am facing short of breath;</span><br>
                     <span class="say">My heart is beating fast</span><br>
