--- a/index.html
+++ b/index.html
@@ -26,20 +26,23 @@
                     <span class="say">aur ek baat btau tu pta hai mere liye 2024 me mila sbse </span><br>
                     <span class="say">best gift hai infect 2024 kya puri life ka hi sbse best</span><br>
                     <span class="say">aur ek baat tu meri nhi hai, main hi tera hu</span><br>
-                     <span class="say">aur schi btau teri vjh se hi main aaj ke tym pe itna success ho paya hu thanks for it baby</span><br>
+                    <span class="say">aur schi btau teri vjh se hi main aaj ke tym pe itna</span><br>
                     <span class="say">success ho paya hu thanks for it baby</span><br>
-                    <span class="say">In every direction, there is you – just you.</span><br>
-                    <span class="say">My emotions are rising and I am facing short of breath;</span><br>
-                    <span class="say">My heart is beating fast</span><br>
-                    <span class="say">What madness, what obsession…</span><br>
-                    <span class="say">What can I say of my state now?</span><br>
-                    <span class="say">My heart, my soul, my whole world,</span><br>
-                    <span class="say">you are my only desire.</span><br>
+                    <span class="say">aur do line tere liye meri trf se👽👾</span><br>
+                    <span class="say">ek hi najar me aap meri mehman ban gye</span><br>
+                    <span class="say">2 baatien kya kr li sara jahan ban gye</span><br>
+                    <span class="say">ki 2 baatien kya kr li sara jahan ban gye</span><br>
+                    <span class="say">aur pass rh kr bhi log hume apna na bna paay</span><br>
+                    <span class="say">ke pass rh kr bhi log hume apna na bna paay</span><br>
+                    <span class="say">aur dur rh kr bhi aap hmari jaan ban gye</span><br>
+                    <span class="say">aur ek aur baat vo khte hai na kisi ke sath sirf vaqt</span><br>
+                    <span class="say">bitane se sab kuch sahi hojata hai haan to</span><br>
+                    <span class="say">mere liye vhi ho aap, i love you meri jaan</span><br>
                     <br>
                     <span class="say">My BABY GIRL only You!! </span><br>
                      
                    <br>
-                    <span class="say"><span class="space"></span> To, MY BABY GIRL(vanshika manchanda)😍😍</span>
+                    <span class="say"><span class="space"></span> to kaisi lgi ye site?🙈🙈👽</span>
                     </div>
                 </div>
                 <div id="clock-box">
